// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DirectionsSectionAndModal component when the student is in reflection renders on desktop 1`] = `
<DirectionsSectionAndModal
  activeStep={1}
  className=""
  closeReadTheDirectionsModal={[Function]}
  inReflection={true}
  passage={
    Object {
      "highlight_prompt": "",
    }
  }
  showReadTheDirectionsModal={false}
>
  <div
    className=""
  >
    <section
      className="reflection-section"
    >
      <h3>
        Directions
      </h3>
      <p>
        Great! 
        <u>
          Now take a moment to reflect on the sentences you highlighted.
        </u>
      </p>
    </section>
  </div>
</DirectionsSectionAndModal>
`;

exports[`DirectionsSectionAndModal component when the student is on the read passage step renders 1`] = `
<DirectionsSectionAndModal
  activeStep={1}
  className=""
  closeReadTheDirectionsModal={[Function]}
  inReflection={false}
  passage={
    Object {
      "highlight_prompt": "",
    }
  }
  showReadTheDirectionsModal={false}
>
  <div
    className=""
  >
    <span />
    <section
      className="directions-section"
    >
      <h3>
        Directions
      </h3>
      <p>
        As you read, highlight two sentences 
        <u />
      </p>
    </section>
  </div>
</DirectionsSectionAndModal>
`;

exports[`DirectionsSectionAndModal component when the student is past the read passage step renders on desktop 1`] = `
<DirectionsSectionAndModal
  activeStep={2}
  className=""
  closeReadTheDirectionsModal={[Function]}
  inReflection={false}
  passage={
    Object {
      "highlight_prompt": "",
    }
  }
  showReadTheDirectionsModal={false}
>
  <div
    className=""
  >
    <section
      className="directions-section"
    >
      <h3>
        Directions
      </h3>
      <p>
        Use information from the text to finish the sentence. 
        <u>
          Remember to put the response in your own words.
        </u>
      </p>
    </section>
  </div>
</DirectionsSectionAndModal>
`;

exports[`DirectionsSectionAndModal component when the student should see the modal renders on desktop 1`] = `
<DirectionsSectionAndModal
  activeStep={1}
  className=""
  closeReadTheDirectionsModal={[Function]}
  inReflection={false}
  passage={
    Object {
      "highlight_prompt": "",
    }
  }
  showReadTheDirectionsModal={true}
>
  <div
    className=""
  >
    <ReadTheDirectionsModal
      closeReadTheDirectionsModal={[Function]}
    >
      <section
        className="read-the-directions-modal"
      >
        <p>
          Read the directions carefully before moving onto reading and highlighting.
        </p>
        <button
          className="quill-button primary contained large focus-on-light"
          onClick={[Function]}
          type="button"
        >
          Got it
        </button>
      </section>
    </ReadTheDirectionsModal>
    <section
      className="directions-section"
    >
      <h3>
        Directions
      </h3>
      <p>
        As you read, highlight two sentences 
        <u />
      </p>
    </section>
  </div>
</DirectionsSectionAndModal>
`;
